--- a/index.html
+++ b/index.html
@@ -22,37 +22,68 @@
         </ul>
       </address>
     </header>
+
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button>type="button">Order Service</button>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+
+      <section>
+        <h2>Our Team</h2>
+        <img
+          src="./imges/img.jpg"
+          alt="Mark Guerrero Product Designer"
+          width="264"
+          height="260"
+        />
+        <img
+          src="./imges/img1.jpg"
+          alt="Tom Ford Frontend Developer"
+          width="264"
+          height="260"
+        />
+        <img
+          src="./imges/img2.jpg"
+          alt="Camila Garcia Marketing"
+          width="264"
+          height="260"
+        />
+        <img
+          src="./imges/img3.jpg"
+          alt="Daniel Wilson UI Designer"
+          width="264"
+          height="260"
+        />
+      </section>
+    </main>
+
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
-
-<main>
-  <section>
-    <h1>Effective Solutions for Your Business</h1>
-    <button>type="button">Order Service</button>
-    <h3>Strategy</h3>
-    <p>
-      Our goal is to identify the business problem to walk away with the perfect
-      and creative solution.
-    </p>
-    <h3>Punctuality</h3>
-    <p>
-      Bring the key message to the brand's audience for the best price within
-      the shortest possible time.
-    </p>
-    <h3>Diligence</h3>
-    <p>
-      Research and confirm brands that present the strongest digital growth
-      opportunities and minimize risk.
-    </p>
-    <h3>Technologies</h3>
-    <p>
-      Design practice focused on digital experiences. We bring forth a deep
-      passion for problem-solving.
-    </p>
-  </section>
-
-  <section>
-    <h2>Our Team</h2>
-    <img src="" alt="" />
-  </section>
-</main>
