--- a/index.html
+++ b/index.html
@@ -57,24 +57,12 @@
           width="264"
           height="260"
         />
-        <img
-          src="./imges/img1.jpg"
-          alt="Tom Ford Frontend Developer"
-          width="264"
-          height="260"
-        />
-        <img
-          src="./imges/img2.jpg"
-          alt="Camila Garcia Marketing"
-          width="264"
-          height="260"
-        />
-        <img
-          src="./imges/img3.jpg"
-          alt="Daniel Wilson UI Designer"
-          width="264"
-          height="260"
-        />
+        <img src="./imges/img1.jpg" alt="Tom Ford Frontend Developer" /> Tom
+        Ford Frontend Developer width="264" height="260" />
+        <img src="./imges/img2.jpg" alt="Camila Garcia Marketing" /> Camila
+        Garcia Marketing width="264" height="260" />
+        <img src="./imges/img3.jpg" alt="Daniel Wilson UI Designer" /> Daniel
+        Wilson UI Designer width="264" height="260" />
       </section>
     </main>
 
