--- a/index.html
+++ b/index.html
@@ -53,16 +53,31 @@
         <h2>Our Team</h2>
         <img
           src="./imges/img.jpg"
-          alt="Mark Guerrero Product Designer"
+          alt="Mark Guerrero"
           width="264"
           height="260"
         />
-        <img src="./imges/img1.jpg" alt="Tom Ford Frontend Developer" /> Tom
-        Ford Frontend Developer width="264" height="260" />
-        <img src="./imges/img2.jpg" alt="Camila Garcia Marketing" /> Camila
-        Garcia Marketing width="264" height="260" />
-        <img src="./imges/img3.jpg" alt="Daniel Wilson UI Designer" /> Daniel
-        Wilson UI Designer width="264" height="260" />
+        <h3>Mark Guerrero</h3>
+        <p>Product Designer</p>
+        <img src="./imges/img1.jpg" alt="Tom Ford" width="264" height="260" />
+        <h3>Tom Ford</h3>
+        <p>Frontend Developer</p>
+        <img
+          src="./imges/img2.jpg"
+          alt="Camila Garcia"
+          width="264"
+          height="260"
+        />
+        <h3>Camila Garcia</h3>
+        <p>Marketing</p>
+        <img
+          src="./imges/img3.jpg"
+          alt="Daniel Wilson"
+          width="264"
+          height="260"
+        />
+        <h3>Daniel Wilson</h3>
+        <p>UI Designer</p>
       </section>
     </main>
 
