--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
+        <h2 hidden>Mission</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -63,17 +64,25 @@
 
       <section>
         <h2>Our Team</h2>
+<ul>
+  <li>
         <img
           src="./imges/img.jpg"
           alt="Mark Guerrero"
           width="264"
           height="260"
-        />
+        />       
         <h3>Mark Guerrero</h3>
         <p>Product Designer</p>
-        <img src="./imges/img1.jpg" alt="Tom Ford" width="264" height="260" />
+  </li>
+  <li>
+        <img src="./imges/img1.jpg" alt="Tom Ford" 
+        width="264" 
+        height="260"
+         />
         <h3>Tom Ford</h3>
         <p>Frontend Developer</p>
+  </li>     
         <img
           src="./imges/img2.jpg"
           alt="Camila Garcia"
@@ -82,14 +91,18 @@
         />
         <h3>Camila Garcia</h3>
         <p>Marketing</p>
+  </li>
+  <li>
         <img
           src="./imges/img3.jpg"
           alt="Daniel Wilson"
           width="264"
           height="260"
-        />
+        /> 
         <h3>Daniel Wilson</h3>
         <p>UI Designer</p>
+  </li>
+  </ul>
       </section>
     </main>
 
