--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <ul>
   <li>
         <img
-          src="./imges/img.jpg"
+          src="./imges/img3.jpg"
           alt="Mark Guerrero"
           width="264"
           height="260"
@@ -76,7 +76,8 @@
         <p>Product Designer</p>
   </li>
   <li>
-        <img src="./imges/img1.jpg" alt="Tom Ford" 
+        <img src="./imges/img2.jpg" 
+        alt="Tom Ford" 
         width="264" 
         height="260"
          />
@@ -84,7 +85,7 @@
         <p>Frontend Developer</p>
   </li>     
         <img
-          src="./imges/img2.jpg"
+          src="./imges/img1.jpg"
           alt="Camila Garcia"
           width="264"
           height="260"
@@ -94,7 +95,7 @@
   </li>
   <li>
         <img
-          src="./imges/img3.jpg"
+          src="./imges/img.jpg"
           alt="Daniel Wilson"
           width="264"
           height="260"
