--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2 hidden>Mission</h2>
+        <h2>Mission</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -64,46 +64,48 @@
 
       <section>
         <h2>Our Team</h2>
-<ul>
-  <li>
-        <img
-          src="./imges/img3.jpg"
-          alt="Mark Guerrero"
-          width="264"
-          height="260"
-        />       
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
-  </li>
-  <li>
-        <img src="./imges/img2.jpg" 
-        alt="Tom Ford" 
-        width="264" 
-        height="260"
-         />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
-  </li>     
-        <img
-          src="./imges/img1.jpg"
-          alt="Camila Garcia"
-          width="264"
-          height="260"
-        />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
-  </li>
-  <li>
-        <img
-          src="./imges/img.jpg"
-          alt="Daniel Wilson"
-          width="264"
-          height="260"
-        /> 
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-  </li>
-  </ul>
+        <ul>
+          <li>
+            <img
+              src="./images/img3.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img2.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img1.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
 
